fixed visual bug on wrap reverse

--- a/client/src/components/Skeletons/Skeleton.scss
+++ b/client/src/components/Skeletons/Skeleton.scss
@@ -5,26 +5,26 @@
   margin: 10px 0;
   border-radius: 4px;
 }
+
 .skeleton.text {
   width: 100%;
   height: 12px;
 }
+
 .skeleton.title {
   width: 50%;
   height: 20px;
   margin-bottom: 15px;
 }
+
 .skeleton.avatar {
-  width: 100px;
-  height: 100px;
+  width: 90px;
+  height: 90px;
   border-radius: 50%;
 }
-.skeleton.thumbnail {
-  width: 100px;
-  height: 100px;
-}
+
 .skeleton-wrapper {
-  margin: 20px 0;
+  margin-bottom: 1em;
   padding: 10px 15px;
   background: #444;
   border-radius: 4px;
